--- a/frontend/pages/login.html
+++ b/frontend/pages/login.html
@@ -23,6 +23,7 @@
 
     <main>
       <h1 lang="lt" class="title">Prisijunkite</h1>
+
       <div class="container-login">
         <section>
           <form id="login-form">
@@ -48,6 +49,11 @@
       <div class="container-signup">
         <h4 lang="lt">Naujas narys?</h4>
         <a href="./signup.html" lang="lt">Prisiregistruokite.</a>
+      </div>
+      <div class="title">
+        <h3>Test account:</h3>
+        <p>Email: test@test.com</p>
+        <p>Password: test</p>
       </div>
     </main>
     <footer>
